<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:padding="5dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ivTopLive"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/imagebidu" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="129dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/iconbidu" />

                <TextView
                    android:id="@+id/tvNameTopLive"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="138dp"
                    android:maxLines="1"
                    android:text="@string/phuong_le"
                    android:fontFamily="@font/lexend_semibold"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="9dp"
                android:maxLines="2"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>