<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="#423F3F">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerAd"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayoutAd"
                    back="@drawable/tablayout_selected"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-20dp" />
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="15dp"
                android:elevation="0dp"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/background_white_circle"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/find" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivChat"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="110dp"
                            android:background="@drawable/background_white_circle"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/chat" />

                        <ImageView
                            android:id="@+id/ivNotification"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="60dp"
                            android:background="@drawable/background_white_circle"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/notifica" />

                        <ImageView
                            android:id="@+id/ivCart"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/background_white_circle"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/cart" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerVoucher"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayoutVoucher"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-20dp"
                    android:background="@drawable/tablayout_selected" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="41.06dp"
                android:orientation="vertical"
                android:paddingStart="11dp">

                <ImageView
                    android:layout_width="75.7dp"
                    android:layout_height="23dp"
                    android:paddingStart="5dp"
                    android:src="@drawable/bidulive" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5F5F5"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcvBiDuLive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />


                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="#f1f1f1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:orientation="vertical"
                android:paddingStart="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvNewProduct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexend_bold"
                        android:paddingStart="4dp"
                        android:text="@string/new_product"
                        android:textColor="@color/nameProduct"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="40dp"
                            android:gravity="center"
                            android:text="@string/view_more"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="7dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/arrowred" />
                    </RelativeLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvNewProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="14dp"
                android:background="#f1f1f1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_bold"
                    android:paddingStart="4dp"
                    android:text="@string/top_find"
                    android:textColor="@color/nameProduct"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="40dp"
                        android:gravity="center"
                        android:text="@string/view_more"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="7dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/arrowred" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTopKey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="#f1f1f1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingStart="6dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/tvCountTopSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_bold"
                    android:paddingStart="10dp"
                    android:text="@string/top_seller"
                    android:textColor="@color/nameProduct"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="40dp"
                        android:gravity="center"
                        android:text="@string/view_more"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="7dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/arrowred" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTopSeller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="14dp"
                android:background="#f1f1f1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:paddingStart="12dp">

                <TextView
                    android:id="@+id/tvTopProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_bold"
                    android:paddingStart="4dp"
                    android:text="@string/top_product"
                    android:textColor="@color/nameProduct"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="40dp"
                        android:gravity="center"
                        android:text="@string/view_more"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="7dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/arrowred" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTopProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="14dp"
                android:background="#f1f1f1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:paddingStart="6dp">

                <TextView
                    android:id="@+id/tvSuggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_bold"
                    android:paddingStart="10dp"
                    android:text="@string/suggest_you"
                    android:textColor="@color/nameProduct"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="40dp"
                        android:gravity="center"
                        android:text="@string/view_more"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="7dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/arrowred" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvSuggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>